# geotempfill

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
examples/: run_california_demo.py
results/reports/: california_demo_metrics.json
results/reports/missing_10pct_seed0/: california_demo_metrics.json
results/reports/missing_30pct_seed0/: california_demo_metrics.json
results/reports/missing_50pct_seed0/: california_demo_metrics.json
results/reports/missing_65pct_seed0/: california_demo_metrics.json
src/geotempfill/: __init__.py  __main__.py  baselines.py  bayesian.py  cli.py  data.py  evaluation.py  halrtc.py  methods.py  spatial.py  tensor.py  visualize.py
tests/: test_baselines.py  test_bayesian.py  test_cli.py  test_evaluation.py  test_halrtc.py  test_methods.py  test_nd_tensor.py  test_spatial.py  test_tensor.py
